2009-09-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Removed line

	  *cupsFilter:   "application/vnd.apple-pdf 25 foomatic-rip"

	  from the Foomatic-generated PPD files, it causes problems with
	  some printers on Mac OS X (bug #386, removes enhancement of bug
	  #313).

2009-08-19  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.3.

	* README, USAGE, configure.ac: Updated for release 4.0.3.

	* foomatic-ppd-to-xml.in: Added "-n" option to the foomatic-ppd-to-xml
	  utility. This makes only new printer XML files being generated and
	  no modified versions of existing files.

2009-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: The "hpijs" driver entry got replaced
	  by "hplip".

	* lib/Foomatic/DB.pm: Add "hpijs-pcl5e" or "hpijs-pcl5c" or "hplip"
	  instead of "hpijs" to the driver list of the XML file of a PCL 5c/e
	  printer if a printer XML file is generated from a PPD file.

	  Fixed ppd1284DeviceID() function, it did not recognize the
	  "CMD"/"COMMAND SET" field in the device ID string.

	  Made sure that the fields in the IEEE-1284 device ID get closed with
	  a semicolon before adding a new field.

	  If there is a <ppdentry> XML tag for the printer/driver combo, do not
	  use the <ppdentry> XML tags for the printer or the driver.

	  Add "*PSVersion:" keywords for the newest Ghostscript versions to the
	  PPD files.

2009-07-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for multiple "*Product:" lines
	  in PPD files, improved determination of the model name from the
	  PPD file, put generation of the Foomatic ID from make and model
	  into the function generatepid().
	  
	* foomatic-ppd-to-xml.in: For determining whether there is already
	  a Foomatic entry for the given PPD, use also all "*Product:"
	  lines in the PPD and the PPD links in the XML files in the
	  OpenPrinting database. Let more than one printer XML file get